# honey-badger-flight-logistics

./: .gitignore  LICENSE  README.md  compose.yaml  pom.xml  run.sh  spotbugs-exclude.xml
docs/: api.rst  architecture.rst  conf.py  configuration.rst  deployment.rst  development.rst  index.rst  introduction.rst  requirements.txt
geoserver/: download-natural-earth.sh  init.sh
geoserver/data/: README.md
qt-client/: CMakeLists.txt  README.md  launcher.sh
qt-client/proto/models/: page_metadata.proto  problem_detail.proto  route.proto  route_page.proto  route_patch.proto  route_request.proto  route_status.proto  waypoint.proto  waypoint_list.proto  waypoint_page.proto  waypoint_patch.proto  waypoint_reorder_request.proto  waypoint_request.proto
qt-client/proto/services/: routes_service.proto  waypoints_service.proto
qt-client/src/: datatypes.h  grpcclient.cpp  grpcclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mapwidget.cpp  mapwidget.h
scripts/: repository_dependency_deduper.py
src/main/java/com/honeybadger/flightlogistics/: DemoDataLoader.java  FlightLogisticsApplication.java  Neo4jBrowserInfo.java  Neo4jBrowserLogger.java
src/main/java/com/honeybadger/flightlogistics/api/: RoutesApiDelegateImpl.java  WaypointsApiDelegateImpl.java
src/main/java/com/honeybadger/flightlogistics/controller/: GeoServerWmsProxy.java  HomeController.java
src/main/java/com/honeybadger/flightlogistics/domain/: RouteEntity.java  RouteStatus.java  WaypointEntity.java
src/main/java/com/honeybadger/flightlogistics/grpc/: GrpcRoutesService.java  GrpcWaypointsService.java  ProtoMapper.java
src/main/java/com/honeybadger/flightlogistics/repository/: RouteRepository.java  WaypointRepository.java
src/main/java/com/honeybadger/flightlogistics/service/: RouteService.java  WaypointService.java
src/main/resources/: .openapi-generator-ignore  application.yaml  banner.txt  demo-data.json
src/main/resources/static/: docs.html  index.html  openapi.yaml  redoc.html  route.html  routes.html  scalar.html
src/main/resources/static/css/: app.css
src/main/resources/static/js/: app.js  route-map-config.js  stop-manifest.js
src/test/java/com/honeybadger/flightlogistics/: FlightLogisticsApplicationTests.java
src/test/java/com/honeybadger/flightlogistics/performance/: JMeterSpringConfiguration.java  JMeterSteps.java  PerformanceScenarioContext.java  PerformanceSuiteIT.java
src/test/java/com/honeybadger/flightlogistics/persistence/: CucumberSpringConfiguration.java  PersistenceSuiteIT.java  RoutePersistenceSteps.java  ScenarioContext.java  WaypointPersistenceSteps.java
src/test/resources/: application.yaml  logback-test.xml
src/test/resources/features/performance/: api_performance.feature
src/test/resources/features/persistence/: mission_persistence.feature  waypoint_persistence.feature
